trunk/NewArchive/7b9f549660702dcf91798074efc2c68c-7904cf83bb2b27db3f32fade22b567cc/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:7:5: error: ‘test::test()’ is private
     test()
     ^
main.cpp:19:10: error: within this context
     test t;
          ^
